manual/httpd-test-ingress-cert-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-httpd
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-httpd
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-httpd
    spec:
      containers:
      - image: registry.redhat.io/ubi8/httpd-24:1
        imagePullPolicy: IfNotPresent
        name: httpd-24
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
