manual/httpd-test-ingress-cert-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-httpd
  name: test-httpd
  namespace: test
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-httpd
  sessionAffinity: None
  type: ClusterIP
